# CurveEditor

./: Bezier.cpp  Bezier.h  CMakeCache.txt  CMakeLists.txt  Curve.cpp  Curve.h  CurveManager.cpp  CurveManager.h  Makefile  Mode.h  Pointf.cpp  Pointf.h  README  cmake_install.cmake  curves.txt  hw4  main.cpp
